atualização do css

--- a/nfts.html
+++ b/nfts.html
@@ -14,7 +14,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"
     ></script>
-    <link rel="stylesheet" href="../Projeto Perfil/stylesnfts.css" />
+    <link rel="stylesheet" href="stylesnfts.css" />
   </head>
 
   <body>
