--- a/games.html
+++ b/games.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../Projeto Perfil/stylegames.css" />
+    <link rel="stylesheet" href="stylegames.css" />
   </head>
 
   <body>
