--- a/musicas.html
+++ b/musicas.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../Projeto Perfil/stylemusicas.css" />
+    <link rel="stylesheet" href="stylemusicas.css" />
   </head>
 
   <body>
