att CSS de todos os html

--- a/animes.html
+++ b/animes.html
@@ -23,7 +23,7 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="../Projeto Perfil/img/gabrelo.png" alt="Foto do Perfil" />
+            <img src="./img/gabrelo.png" alt="Foto do Perfil" />
             <h3>Gabriel Sousa</h3>
             <p>Front-End Dev</p>
           </div>
@@ -51,18 +51,18 @@
           <div class="pro">
             <div class="icons">
               <a href="https://github.com/gabrelo">
-                <img src="../Projeto Perfil/icons/github.png"
+                <img src="./icons/github.png"
               /></a>
               <a href="mailto:gabriel10moines@gmail.com">
-                <img src="../Projeto Perfil/icons/gmail.png"
+                <img src="./icons/gmail.png"
               /></a>
               <a href="https://twitter.com/gabrieldoque">
-                <img src="../Projeto Perfil/icons/twitter.png"
+                <img src="./icons/twitter.png"
               /></a>
               <a
                 href="https://discord.com/channels/497312527093334036/931269506754568212"
               >
-                <img src="../Projeto Perfil/icons/discord.png"
+                <img src="./icons/discord.png"
               /></a>
             </div>
           </div>
@@ -210,18 +210,18 @@
             <div class="pro2">
               <div class="icons2">
                 <a href="https://github.com/gabrelo">
-                  <img src="../Projeto Perfil/icons/github.png"
+                  <img src="./icons/github.png"
                 /></a>
                 <a href="mailto:gabriel10moines@gmail.com">
-                  <img src="../Projeto Perfil/icons/gmail.png"
+                  <img src=".icons/gmail.png"
                 /></a>
                 <a href="https://twitter.com/gabrieldoque">
-                  <img src="../Projeto Perfil/icons/twitter.png"
+                  <img src="./icons/twitter.png"
                 /></a>
                 <a
                   href="https://discord.com/channels/497312527093334036/931269506754568212"
                 >
-                  <img src="../Projeto Perfil/icons/discord.png"
+                  <img src="./icons/discord.png"
                 /></a>
               </div>
             </div>
