--- a/nfts.html
+++ b/nfts.html
@@ -55,18 +55,18 @@
           <div class="pro">
             <div class="icons">
               <a href="https://github.com/gabrelo">
-                <img src="../Projeto Perfil/icons/github.png"
+                <img src="./icons/github.png"
               /></a>
               <a href="mailto:gabriel10moines@gmail.com">
-                <img src="../Projeto Perfil/icons/gmail.png"
+                <img src="./icons/gmail.png"
               /></a>
               <a href="https://twitter.com/gabrieldoque">
-                <img src="../Projeto Perfil/icons/twitter.png"
+                <img src="./icons/twitter.png"
               /></a>
               <a
                 href="https://discord.com/channels/497312527093334036/931269506754568212"
               >
-                <img src="../Projeto Perfil/icons/discord.png"
+                <img src="./icons/discord.png"
               /></a>
             </div>
           </div>
@@ -225,18 +225,18 @@
             <div class="pro2">
               <div class="icons2">
                 <a href="https://github.com/gabrelo">
-                  <img src="../Projeto Perfil/icons/github.png"
+                  <img src="./icons/github.png"
                 /></a>
                 <a href="mailto:gabriel10moines@gmail.com">
-                  <img src="../Projeto Perfil/icons/gmail.png"
+                  <img src=".icons/gmail.png"
                 /></a>
                 <a href="https://twitter.com/gabrieldoque">
-                  <img src="../Projeto Perfil/icons/twitter.png"
+                  <img src="./icons/twitter.png"
                 /></a>
                 <a
                   href="https://discord.com/channels/497312527093334036/931269506754568212"
                 >
-                  <img src="../Projeto Perfil/icons/discord.png"
+                  <img src="./icons/discord.png"
                 /></a>
               </div>
             </div>
