adicionando a img do profile em todos os HTML

--- a/nfts.html
+++ b/nfts.html
@@ -27,7 +27,7 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="../Projeto Perfil/img/gabrelo.png" alt="Foto do Perfil" />
+            <img src="./img/gabrelo.png" alt="Foto do Perfil" />
             <h3>Gabriel Sousa</h3>
             <p>Front-End Dev</p>
           </div>
