--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="/img/gabrelo.png" alt="Foto do Perfil" />
+            <img src="./img/gabrelo.png" alt="Foto do Perfil" />
             <h3>Gabriel Sousa</h3>
             <p>Front-End Dev</p>
           </div>
